config yaml updated & LLM model invoked

--- a/notebook/logging_experiment.ipynb
+++ b/notebook/logging_experiment.ipynb
@@ -116,6 +116,35 @@
    "id": "525bd762",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import structlog\n",
+    "logger = structlog.get_logger()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2b4343d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-07-26 16:23:40 [info     ] user uploaded a file           filename=report.pdf user_id=123\n"
+     ]
+    }
+   ],
+   "source": [
+    "logger.info(\"user uploaded a file\",user_id=123,filename='report.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b6f001d",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
